# vce

./: AGENTS.md  README.md  pyproject.toml
src/vce/: __init__.py  benchmark.py  benchmark_light.py  core.py  simulation.py
tests/: test_benchmark.py  test_simulation.py
