[project]
name = "vce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aki", email = "838013444@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.16.1",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "ruff>=0.12.2",
    "scipy>=1.15.3",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]

[project.scripts]
vce = "vce:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
    "mypy>=1.10.0",
]

[tool.mypy]
ignore_missing_imports = true
